...
                                <rect key="frame" x="165.5" y="397" width="44" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="Ibk-J9-342"/>
                                    <constraint firstAttribute="height" constant="44" id="ysW-00-5s4"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="pause"/>
                                <connections>
                                    <action selector="pausar:" destination="oJV-Ek-6zS" eventType="touchUpInside" id="lhw-pp-ol9"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yGJ-t4-mkM">
                                <rect key="frame" x="256" y="403" width="32" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="32" id="2Vz-sE-Usr"/>
                                    <constraint firstAttribute="width" constant="32" id="Bpb-MU-caH"/>
                                </constraints>
                                <state key="normal" image="next"/>
                                <connections>
                                    <action selector="avancarNoVideo:" destination="oJV-Ek-6zS" eventType="touchUpInside" id="1DM-Mj-EqX"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bp-DX-KyS">
                                <rect key="frame" x="87" y="403" width="32" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="32" id="42Q-0v-dY3"/>
                                    <constraint firstAttribute="width" constant="32" id="QlH-Ai-iFY"/>
                                </constraints>
                                <state key="normal" image="backVideo"/>
                                <connections>
                                    <action selector="voltarNoVideo:" destination="oJV-Ek-6zS" eventType="touchUpInside" id="w9U-tn-496"/>
                                </connections>
                            </button>
                            <slider opaque="NO" contentMode="scaleToFill" restorationIdentifier="slider2" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="5vO-OT-992">
                                <rect key="frame" x="14" y="469" width="347" height="31"/>
...
