...
        self.tempoAtual2.text = "\(minutosAtual):\(segundosStringAtual)"
        
        
        //SE O VIDEO ACABAR, TROCAR A IMAGEM DO BOTAO DE PLAY
        if self.tempoAtualInt == self.tempoMaximoInt {
            
            self.botaoPlay.setImage(UIImage(named: "play"), for: .normal)
            self.botaoPlay2.setImage(UIImage(named: "play"), for: .normal)
            
        }
        
    }
    
...
